--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -38,7 +38,8 @@
     text-decoration:underline;
 }
 
-/* login */
+/* login / register*/
+    /* login */
 .loginContainer {
     width:100vw;
     height:100vh;
@@ -49,8 +50,8 @@
     background-color: rgba(0, 0, 0, 0.719);
 }
 .formL {
-    width:400px;
-    height:500px;
+    width:450px;
+    height:550px;
     background-color: rgb(18, 19, 19);
     border: 1px solid black;
     border-radius: 20px;
@@ -61,9 +62,10 @@
     justify-content: center;
     position: relative;
 }
-.AuthenticationImg {
-    width:280px;
-    height:280px;
+.AuthenticationImg, .registerImg{
+    width:300px;
+    height:300px;
+    margin-top:-50px;
 }
 .dFlexRow {
     width:100%;
@@ -73,21 +75,27 @@
 }
 .dFlexRow label {
     margin-bottom: 5px;
+    font-size: 16px;
 }
-.dFlexRow input {
+.dFlexRow input,.ageContainer select {
     width:100%;
     height:40px;
     color:black;
     font-family: light;
     padding:0 10px;
+    border: 1px solid black;
 }
 .dFlexRow input::placeholder {
     font-size: 12px;
 }
 .btnLogin {
-    width:80px;
+    width:120px;
     height:40px;
     border-radius: 10px;
+}
+.btnLogin:active {
+    transform: scale(0.95);
+    transition: transform 0.3s;
 }
 .closeImg {
     width:25px;
@@ -102,25 +110,96 @@
 .closeImg:hover {
     box-shadow: 0px 0px 5px rgba(254, 254, 254, 0.5);
 }
-.warningImgS {
+.warningSuccesEU {
     width:20px;
     height:20px;
     filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
     position: absolute;
-    top: calc(280px + 30px + 15px);
+    top: calc(280px + 30px + 15px + 10px + 25px);
     right:30px;
     cursor: pointer;
 }
-.warningImgP {
+.warningSuccesEP {
     width:20px;
     height:20px;
     filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
     position: absolute;
-    top: calc(280px + 30px + 10px + 25px + 60px);
+    top: calc(280px + 30px + 10px + 25px + 60px + 35px);
     right:30px;
     cursor: pointer;
 }
-/* login */
+    /* login */
+    /* register */
+    .formR {
+        width:450px;
+        height:700px;
+        background-color: rgb(18, 19, 19);
+        border: 1px solid black;
+        border-radius: 20px;
+        padding:0 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    /* warning succes image of register userName */
+    .warningSuccesRU {
+        width:20px;
+        height:20px;
+        filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
+        position: absolute;
+        top: calc(280px + 30px + 15px + 10px);
+        right:30px;
+        cursor: pointer;
+    }
+    /* warning succes image of register email */
+    .warningSuccesRE {
+        width:20px;
+        height:20px;
+        filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
+        position: absolute;
+        top: calc(280px + 30px + 10px + 25px + 60px + 10px);
+        right:30px;
+        cursor: pointer;
+    }
+    
+     /* warning succes image of register password */
+     .warningSuccesRP {
+        width:20px;
+        height:20px;
+        filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
+        position: absolute;
+        top: calc(280px + 30px + 10px + 25px + 60px + 40px + 50px + 40px + 30px);
+        right:30px;
+        cursor: pointer;
+    }
+
+    /* Age */
+    .ageName {
+        font-size: 16px;
+        margin-right: 300px;
+        margin-bottom:5px;
+    }
+    .ageContainer {
+        width:100%;
+        height:41px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    /* .ageContainer select {
+        height:40px;
+        color:rgba(0, 0, 0, 0.744);
+        width:130px;
+        background-color: white;
+    } */
+    .ageContainer select option {
+        color:rgba(0, 0, 0, 0.744);
+    }
+    /* Age */
+    /* register */
+/* login /register*/
 
 
 
