--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -115,7 +115,7 @@
     height:20px;
     filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
     position: absolute;
-    top: calc(280px + 30px + 15px + 10px + 25px);
+    top: calc(280px + 30px + 15px + 10px);
     right:30px;
     cursor: pointer;
 }
@@ -124,7 +124,7 @@
     height:20px;
     filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
     position: absolute;
-    top: calc(280px + 30px + 10px + 25px + 60px + 35px);
+    top: calc(280px + 30px + 10px + 25px + 60px + 10px);
     right:30px;
     cursor: pointer;
 }
