know when you log in , header bar will have you userName written on the right side from you and then there will be a log out button . when you click it it will log out

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -222,3 +222,8 @@
     left: 0;
     background-color: #040404;
 }
+.user {
+    color:rgba(124, 142, 207, 0.734);
+    font-size: 18px;
+}
+/* header */
