--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
   padding:0;
   box-sizing: border-box;
   font-family: openSeas;
-  color:white;
 }
 body {
   width:100vw;
@@ -15,6 +14,20 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #040404;
+}
+.container {
+  width:100vw;
+  height:100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #040404;
+}
+.containerChange {
+  width:100vw;
+  height:100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f4f4;
 }
 .container {
   display: flex;
