--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -308,6 +308,13 @@
 .sunRegular {
     filter: invert(96%) sepia(30%) saturate(2636%) hue-rotate(355deg) brightness(105%) contrast(105%);
 }
+
+/* carousel */
+
+
+/* carousel */
+
+
 /* body */
 
 
