Currently I added react bootstrap if anyone doesnot know you can get more info on this website https://react-bootstrap.github.io/ . So you can see a carusel at the main page . :D Next station is Contact which will be connected to the backEnd so You must not upload your real email and name because it can be seen on the website which I will upload soon

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   background-color: #040404;
 }
-.container {
+.containerFirst {
   width:100vw;
   height:100vh;
   display: flex;
