--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -343,6 +343,8 @@
     height:50px;
     background-color: #040404;
     color:aliceblue;
+    position: relative;
+    z-index: 2;
 }
 .footerContainerChange {
     margin: auto;
@@ -350,6 +352,8 @@
     height:50px;
     background-color: #dfdede;
     color:black;
+    position: relative;
+    z-index: 2;
 }
 .footerWhenLogReg {
     margin: auto;
