--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -345,6 +345,11 @@
     color:aliceblue;
     position: relative;
     z-index: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 40px;
 }
 .footerContainerChange {
     margin: auto;
@@ -354,6 +359,11 @@
     color:black;
     position: relative;
     z-index: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 40px;
 }
 .footerWhenLogReg {
     margin: auto;
@@ -361,5 +371,32 @@
     height:50px;
     background-color: #ff0000;
     color: #404040;
+}
+.footerNav a {
+    color:white;
+    text-decoration: none;
+}
+.footerNav a:hover,.footerNavChange a:hover {
+ text-decoration: underline;
+}
+.footerNavChange a {
+    color:rgb(0, 0, 0);
+    text-decoration: none;
+}
+.copyRightImg {
+    width:10px;
+    height:10px;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(34deg) brightness(99%) contrast(108%);
+    position: absolute;
+    top:12px;
+    right:100px;        
+}
+.copyRightImgBlack {
+    width:10px;
+    height:10px;
+    filter: invert(0%) sepia(0%) saturate(5088%) hue-rotate(155deg) brightness(93%) contrast(105%);
+    position: absolute;
+    top:12px;
+    right:100px;    
 }
 /* footer */
