--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -177,7 +177,7 @@
     height:20px;
     filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
     position: absolute;
-    top: calc(280px + 30px + 15px + 10px);
+    top: calc(280px + 30px + 15px + 20px);
     right:30px;
     cursor: pointer;
 }
@@ -186,7 +186,7 @@
     height:20px;
     filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
     position: absolute;
-    top: calc(280px + 30px + 10px + 25px + 60px + 10px);
+    top: calc(280px + 30px + 10px + 25px + 60px + 20px);
     right:30px;
     cursor: pointer;
 }
@@ -226,7 +226,7 @@
         height:20px;
         filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
         position: absolute;
-        top: calc(280px + 30px);
+        top: calc(280px + 30px + 10px);
         right:30px;
         cursor: pointer;
     }
@@ -236,7 +236,7 @@
         height:20px;
         filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
         position: absolute;
-        top: calc(280px + 30px + 10px + 25px + 45px);
+        top: calc(280px + 30px + 10px + 25px + 45px + 10px);
         right:30px;
         cursor: pointer;
     }
@@ -247,7 +247,7 @@
         height:20px;
         filter: invert(14%) sepia(68%) saturate(7459%) hue-rotate(8deg) brightness(90%) contrast(120%);
         position: absolute;
-        top: calc(280px + 30px + 10px + 25px + 60px + 40px + 50px + 45px);
+        top: calc(280px + 30px + 10px + 25px + 60px + 40px + 50px + 45px + 10px);
         right:30px;
         cursor: pointer;
     }
