--- a/src/components/Header HTCCH/HTCCH.module.css
+++ b/src/components/Header HTCCH/HTCCH.module.css
@@ -212,12 +212,6 @@ h6 a:hover {
     background-size: 1200px;
     padding: 10px 20px;
 }
-.parentBlur {
-    filter: blur(5px);
-}
-.childNoBlur {
-    filter: none;
-}
 .accordionContainerChange {
     background-image: url("../../images/white.jpg");
     width:1200px;
@@ -270,3 +264,14 @@ h6 a:hover {
 }
 
 /* confidential agreement */
+
+/* home */
+.homeContainer {
+    width:100%;
+    height:100%;
+    overflow-x: hidden;
+}
+.cardContainer {
+    width:80%;
+}
+/* home */
