--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -328,6 +328,9 @@
 .sunRegular {
     filter: invert(96%) sepia(30%) saturate(2636%) hue-rotate(355deg) brightness(105%) contrast(105%);
 }
+/* .blur {
+    filter: blur(5px) ;
+} */
 
 
 
