--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -32,6 +32,13 @@
 .nav {
     padding-left: 20px;
 }
+.navChange {
+    padding-left: 20px;
+    
+}
+.navChange:hover {
+    text-decoration: none;
+}
 .headerContainer a {
     text-decoration: none;
     font-size: 16px;
